Bug 408374 - Terminal not regaining focus after renaming session
Summary: Terminal not regaining focus after renaming session
Status: RESOLVED FIXED
Alias: None
Product: yakuake
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git (KDE Platform 4)
Platform: Kubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: Eike Hein
URL:
Keywords:
: 410524 412385 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-06-06 06:36 UTC by davenewza
Modified: 2020-06-13 10:58 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Patch that fixes the renaming issue (1.47 KB, text/plain)
2019-10-28 19:29 UTC, zonker.dinger
Details

Note You need to log in before you can comment on or make changes to this bug.
Description davenewza 2019-06-06 06:36:09 UTC
SUMMARY
After renaming a session the terminal does not regain focus, which means you need to use the mouse cursor to click in the terminal to regain focus. Ideally, it should regain focus immediately after submitting the name of the session. No mouse interaction should be necessary.

STEPS TO REPRODUCE
1. Press shortcut key to rename your current session.
2. Type in new name for session.
3. Press enter to confirm name.
4. Type a command, assuming your focus has been returned to the terminal - but it hasn't.  This now requires the mouse to click in the terminal to regain focus. Even using the shortcut keys for previous/next session do not work.

OBSERVED RESULT
Terminal focus is not resestablished after entering a new name for the session.

EXPECTED RESULT
Terminal focus should be automatically regained after entering a new name for the session.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 19.04
(available in About System)
KDE Plasma Version: 5.15.4
KDE Frameworks Version: 5.56.0
Qt Version: 5.12.2
Comment 1 zonker.dinger 2019-09-19 16:53:58 UTC
I have exactly the same problem. After renaming a session/tab (either with a shortcut or through the context menu of the session) and pressing enter the terminal doesn't regain the keyboard focus. Typing on the keyboard has no effect. I have to left-click with the mouse somewhere in the terminal area for it to regain the keyboard focus and to receive text input again.

Yakuake's behaviour in this regard used to be different. I can remember that terminal automatically received focus again after renaming its session. This seems to be a regression.

SOFTWARE/OS VERSIONS
Gentoo Linux
Yakuake 3.0.5
Plasma 5.15.5
QtCore 5.12.3
Comment 2 zonker.dinger 2019-09-19 16:56:10 UTC
*** Bug 410524 has been marked as a duplicate of this bug. ***
Comment 3 Luca Weiss 2019-09-30 09:27:37 UTC
*** Bug 412385 has been marked as a duplicate of this bug. ***
Comment 4 zonker.dinger 2019-10-28 19:28:28 UTC
I've created a patch that fixes this issue. I'm running Yakuake for few weeks using the fix by now and it works great, all renaming problems are fixed for me. I've submitted the patch to the KDE team using the Phabricator. I will attach the patch to this issue too, just to be sure.
Comment 5 zonker.dinger 2019-10-28 19:29:18 UTC
Created attachment 123548 [details]
Patch that fixes the renaming issue
Comment 6 Patrick Silva 2020-02-12 21:50:09 UTC
cannot reproduce with yakuake 19.12.2.
I can type in terminal after renaming a tab/session via shortcut or option from context menu.

Operating System: Arch Linux 
KDE Plasma Version: 5.18.0
KDE Frameworks Version: 5.67.0
Qt Version: 5.14.1
Comment 7 zonker.dinger 2020-02-14 15:38:57 UTC
Confirmed, the bug doesn't occur in Yakuake 19.12.2 anymore. The terminal automatically gains keyboard focus after being renamed.
Comment 8 Maximilian Schiller 2020-06-13 10:58:24 UTC
Git commit dd60b75c811fc26e711193e34f5f895aa33b2526 by Maximilian Schiller.
Committed on 13/06/2020 at 10:58.
Pushed by mschiller into branch 'master'.

Reraise the active sesson after renaming a session

This patch gives focus back to the currently active terminal after
renaming a session with either the context menu or the shortcut.

Whenever a tab title is edited signal to the sessionstack to raise the
active session.

M  +3    -0    app/mainwindow.cpp
M  +2    -0    app/tabbar.cpp
M  +1    -0    app/tabbar.h

https://invent.kde.org/utilities/yakuake/commit/dd60b75c811fc26e711193e34f5f895aa33b2526