Reraise the active sesson after renaming a session

This patch gives focus back to the currently active terminal after
renaming a session with either the context menu or the shortcut.

Whenever a tab title is edited signal to the sessionstack to raise the
active session.

BUG: 408374